--- a/ERP_JOSEREIS/ERP_JOSEREIS.csproj
+++ b/ERP_JOSEREIS/ERP_JOSEREIS.csproj
@@ -383,6 +383,12 @@
   <ItemGroup>
     <Content Include="Views\Cliente\DetailsPF.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Cliente\DetailsPJ.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Cliente\ClientePessoaFisicaDetalhes.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
