--- a/ERP_JOSEREIS/ERP_JOSEREIS.csproj
+++ b/ERP_JOSEREIS/ERP_JOSEREIS.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Controllers\CidadeController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\EstadoController.cs" />
+    <Compile Include="Controllers\FornecedorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TesteController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -184,6 +185,7 @@
     <Compile Include="Models\ERPContext.cs" />
     <Compile Include="Models\Estado.cs" />
     <Compile Include="Models\FormaPagamento.cs" />
+    <Compile Include="Models\Fornecedor.cs" />
     <Compile Include="Models\Funcionario.cs" />
     <Compile Include="Models\FuncionarioPagamento.cs" />
     <Compile Include="Models\Item.cs" />
@@ -198,6 +200,7 @@
     <Compile Include="Models\TipoMovimento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ClienteViewModel.cs" />
+    <Compile Include="ViewModels\FornecedorViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -388,6 +391,39 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Cliente\ClientePessoaFisicaDetalhes.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\Create.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\Delete.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\CreatePJ.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\CreatePF.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\DetailsPJ.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\FornecedorPessoaFisica.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\FornecedorPessoaJuridica.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Fornecedor\DetailsPF.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
